apps/media/torrentio/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: torrentio
  labels:
    app: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: gabisonfire/knightcrawler-producer:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
