apps/media/torrentio/torrentio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torrentio
  namespace: torrentio
  labels:
    app: torrentio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: torrentio
  template:
    metadata:
      labels:
        app: torrentio
    spec:
      containers:
        - name: torrentio
          image: gabisonfire/knightcrawler-addon:latest
          ports:
            - containerPort: 7000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: torrentio
  namespace: torrentio
spec:
  selector:
    app: torrentio
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
      name: http
  type: ClusterIP
